# url-shortener-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  url-shortener.postman_collection.json
.github/workflows/: build.yml  ci.yml
configuration/: base.yml
src/: configuration.rs  lib.rs  macros.rs  main.rs  startup.rs
src/handler/: mod.rs  url_add.rs  url_delete.rs  url_redirect.rs
src/parser/: long_url.rs  mod.rs
tests/: integration_tests.rs
