[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "rt"] }
serde = "1.0.201"
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
uuid = { version = "1.8.0", features = ["v4"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
serde-aux = "4.2.0"
tracing-actix-web = "0.7.7"
secrecy = { version = "0.8", features = ["serde"] }
actix-web-httpauth = "0.8.1"
serde_json = "1.0.117"
thiserror = "1.0.60"
unicode-segmentation = "1.10.1"
redis = "0.25.0"
sha256 = "1.5.0"
validator = "0.18.1"

[dev-dependencies]
claims = "0.7.1"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "blocking", "rustls-tls"] }
once_cell = "1.18.0"
