[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "rt"] }
serde = "1.0.214"
config = { version = "0.14.1", default-features = false, features = ["yaml"] }
uuid = { version = "1.11.0", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
serde-aux = "4.5.0"
tracing-actix-web = "0.7.14"
secrecy = { version = "0.8", features = ["serde"] }
actix-web-httpauth = "0.8.2"
serde_json = "1.0.132"
thiserror = "1.0.65"
unicode-segmentation = "1.12.0"
redis = "0.27.5"
sha256 = "1.5.0"
validator = "0.18.1"
time = "0.3.36"

[dev-dependencies]
claims = "0.7.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "blocking", "rustls-tls"] }
once_cell = "1.20.2"
